--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ nav .link:hover {
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
-  background-color: rgb(190, 60, 82);
+  background-color: rgb(196, 90, 107);
   position: relative;
 }
 
@@ -65,18 +65,16 @@ nav .link:hover {
 
 .cont {
   text-align: center;
-  margin: 40px 0 40px 0;
   background-color: rgb(190, 60, 82);
 }
 
 .contact-img {
   width: 100px;
-  margin-left: 30px;
+  margin: 40px 0 40px 30px;
 }
 
 .cont .contact-img:hover {
-  border-width: 1px;
+  border-width: 2px;
   border-style: solid;
-  border-color: #000;
+  border-color: rgb(212, 123, 138);
 }
-
