--- a/Technical_Documentation_Page/style.css
+++ b/Technical_Documentation_Page/style.css
@@ -2,6 +2,10 @@ header {
   font-size: 30px;
 }
 
+.main-section header {
+  color: purple;
+}
+
 #navbar {
   display: flex;
   flex-direction: column;
